# Huerta

./: .env.example  .gitignore  CMakeLists.txt
.github/workflows/: main_huerta.yml
cloud/: agent.py  common.py  function_app.py  requirements.txt
cloud/core/: auth.py  config.py  db.py  device_view.py  http.py  time_utils.py
cloud/routes/: agent_routes.py  auth_routes.py  device_action_routes.py  device_routes.py  health_routes.py  power_routes.py  terminal_routes.py
cloud/services/: telemetry_service.py
cloud/static/: index.html
main/: CMakeLists.txt  cloud_client.c  cloud_client.h  main.c  relay.c  relay.h  shell.c  shell.h  wifi.c  wifi.h
